# GGCHAIN

./: .gitignore  LICENSE  README.md
contracts/: GGPAY_USDT.sol  GGToken.sol  README.md
contracts/dex/: 01_WGG.sol  02_GGSwapPair.sol  03_GGSwapFactory.sol  04_GGSwapRouter.sol  README.md
contracts/dex/abi/: GGSwapFactory.json  GGSwapPair.json  GGSwapRouter.json  WGG.json
docs/: add-to-metamask.md  mining-guide.md  network-info.md
sdk/: README.md
sdk/js/: README.md  package.json  tsconfig.json
sdk/js/src/: client.ts  constants.ts  explorer.ts  index.ts  pool.ts  token.ts
sdk/python/: README.md  pyproject.toml
sdk/python/gghyper_sdk/: __init__.py  client.py  constants.py  explorer.py  pool.py  token.py
