[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gghyper-sdk"
version = "0.1.0"
description = "Official Python SDK for GGCHAIN — connect, deploy, multicall, explorer, mining pool & events."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "GGHyper Labs" }]
requires-python = ">=3.9"
dependencies = ["web3>=6.0", "eth-account>=0.10", "requests>=2.28"]
keywords = ["ggchain", "gghyper", "web3", "evm", "blockchain", "sdk", "rpc"]

[project.urls]
Homepage = "https://gghyper.net"
Documentation = "https://docs.gghyper.net/sdk"
Repository = "https://github.com/gghyper/sdk-py"

[tool.hatch.build.targets.wheel]
packages = ["gghyper_sdk"]
